# 2023.0103

./: .gitignore  AUTHORS  LICENSE.txt  README.md  README.rst  README2.md  setup.cfg
demos/: CVRP.py  CVRPTW.py  HFVRP.py
results/: CVRPTW_C101_CLP_yes.out  CVRPTW_C101_CPLEX_yes_no.out  CVRPTW_C101_CPLEX_yes_yes.out  CVRPTW_C102_CLP_yes.out  CVRPTW_C102_CPLEX_yes_no.out  CVRPTW_C102_CPLEX_yes_yes.out  CVRPTW_C103_CLP_yes.out  CVRPTW_C103_CPLEX_yes_no.out  CVRPTW_C103_CPLEX_yes_yes.out  CVRPTW_C104_CLP_yes.out  CVRPTW_C104_CPLEX_yes_no.out  CVRPTW_C104_CPLEX_yes_yes.out  CVRPTW_C105_CLP_yes.out  CVRPTW_C105_CPLEX_yes_no.out  CVRPTW_C105_CPLEX_yes_yes.out  CVRPTW_C106_CLP_yes.out  CVRPTW_C106_CPLEX_yes_no.out  CVRPTW_C106_CPLEX_yes_yes.out  CVRPTW_C107_CLP_yes.out  CVRPTW_C107_CPLEX_yes_no.out  CVRPTW_C107_CPLEX_yes_yes.out  CVRPTW_C108_CLP_yes.out  CVRPTW_C108_CPLEX_yes_no.out  CVRPTW_C108_CPLEX_yes_yes.out  CVRPTW_C109_CLP_yes.out  CVRPTW_C109_CPLEX_yes_no.out  CVRPTW_C109_CPLEX_yes_yes.out  CVRPTW_C1_2_10_CLP_yes.out  CVRPTW_C1_2_10_CPLEX_yes_no.out  CVRPTW_C1_2_10_CPLEX_yes_yes.out  CVRPTW_C1_2_1_CLP_yes.out  CVRPTW_C1_2_1_CPLEX_yes_no.out  CVRPTW_C1_2_1_CPLEX_yes_yes.out  CVRPTW_C1_2_2_CLP_yes.out  CVRPTW_C1_2_2_CPLEX_yes_no.out  CVRPTW_C1_2_2_CPLEX_yes_yes.out  CVRPTW_C1_2_3_CLP_yes.out  CVRPTW_C1_2_3_CPLEX_yes_no.out  CVRPTW_C1_2_3_CPLEX_yes_yes.out  CVRPTW_C1_2_4_CLP_yes.out  (+1058 more)
scripts/: CVRPTW_C101_CLP_yes.sh  CVRPTW_C101_CPLEX_yes_no.sh  CVRPTW_C101_CPLEX_yes_yes.sh  CVRPTW_C102_CLP_yes.sh  CVRPTW_C102_CPLEX_yes_no.sh  CVRPTW_C102_CPLEX_yes_yes.sh  (+1093 more)
(+22 files in other folders)
