# setup.cfg file at the root directory
[metadata]
name = VRPSolverEasy
version = 0.1.3
author = "UCHOA Eduardo SADYKOV Ruslan QUEIROGA Eduardo ERRAMI Najib"
author_email = "najib.errami@inria.fr"
url=https://github.com/inria-UFF/VRPSolverEasy
description = 'VRPSolverEasy is a simplified modeler solving routing problems by using a Branch-Cut-and-Price approach on a solver like CLP or CPLEX'
long_description = file: README.md
license_files = LICENSE.txt
keywords=['VRP','Branch-Cut-&Price','Operations Research','Optimization','Linear Programming','Routing problems','Solver','Supply chain']
classifier =
   Development Status :: 4 - Beta
   Environment :: Console
   Intended Audience :: Science/Research
   Topic :: Scientific/Engineering :: Mathematics
   License :: OSI Approved :: MIT License
   Operating System :: MacOS
   Operating System :: Microsoft :: Windows
   Operating System :: POSIX :: Linux
   Programming Language :: Python :: 3
   Natural Language :: English

[options]
python_requires = >=3.6
packages=
            VRPSolverEasy
            VRPSolverEasy.src
            VRPSolverEasy.lib.Windows
            VRPSolverEasy.lib.Linux
            VRPSolverEasy.lib.Darwin
[options.package_data]
* = *
